# robotframework-libtoc

./: .gitignore  README.md  libtoc.py  pyproject.toml
SUT X/: doc.config
SUT Y/: SettingsMenu.robot
example-package/: pyproject.toml
example-package/src/example_package/resources/: sample.resource
example_resources/: .libtoc
example_resources/SUT X/python/: NavigationMenu.py
example_resources/SUT Y/: Common.robot
example_resources/somepy/mylib/: mypy.py
examples/: .libtoc  generate_docs.sh
examples/some-libs/mylib/: mypy.py
examples/some-package/: pyproject.toml
examples/some-package/libs/: package_lib.py
examples/some-package/resources/: sample.resource
examples/some-resources/SUT X/python/: NavigationMenu.py
examples/some-resources/SUT X/robotframework/: Common.robot  LoginPage.robot
examples/some-resources/SUT Y/: .libtoc
robotframework_libtoc/: homepage_template.html  libtoc.py  toc_template.html
